--- a/spt.conf
+++ b/spt.conf
@@ -1,308 +1,85 @@
-  upstream sphk {
-    	hash $remote_addr consistent;
-        server 103.135.102.186:29000 max_fails=3 fail_timeout=30s;
-    }
-    upstream sptw {
-    	hash $remote_addr consistent;
-    	server hinet1.camdvr.org:29001 max_fails=3 fail_timeout=30s;
-    }
-    upstream spsg {
-        hash $remote_addr consistent;
-        server 172.104.183.187:29002 max_fails=3 fail_timeout=30s;
-    }
-    upstream spjp {
-        hash $remote_addr consistent;
-        server 139.162.122.193:29003 max_fails=3 fail_timeout=30s;
-    }
-    upstream spkr {
-        hash $remote_addr consistent;
-        server 150.230.254.120:29004 max_fails=3 fail_timeout=30s;
-    }
-    upstream spus {
-        hash $remote_addr consistent;
-        server 152.70.124.200:29005 max_fails=3 fail_timeout=30s;
-    }
-    upstream spuk {
-        hash $remote_addr consistent;
-        server 143.47.249.213:29006 max_fails=3 fail_timeout=30s;
-    }
-    upstream spde {
-        hash $remote_addr consistent;
-        server 138.2.133.156:29007 max_fails=3 fail_timeout=30s;
-    }
-    upstream spca {
-        hash $remote_addr consistent;
-        server 132.145.109.63:31008 max_fails=3 fail_timeout=30s;
-    }
-     upstream tikus {
-        hash $remote_addr consistent;
-        server 45.83.25.137:54321 max_fails=3 fail_timeout=30s;
-    }
-     upstream tikusny {
-        hash $remote_addr consistent;
-        server 192.227.225.229:54321 max_fails=3 fail_timeout=30s;
-    }
-     upstream tikusshs {
-        hash $remote_addr consistent;
-        server 23.95.214.36:54321 max_fails=3 fail_timeout=30s;
-    }
-    upstream tikuk {
-        hash $remote_addr consistent;
-        server 143.47.249.213:54321 max_fails=3 fail_timeout=30s;
-    }
-    upstream tikde {
-        hash $remote_addr consistent;
-        server 89.58.60.17:3389 max_fails=3 fail_timeout=30s;
-    }
-    server {
-        listen              443 ssl;                   
-        server_name spchk.1234567890spcloud.com;
-        ssl_protocols       TLSv1.2 TLSv1.3;      
+# 上游服务器配置
+upstream sphk {
+    hash $remote_addr consistent;
+    dynamic_resolve fallback=stale fail_timeout=30s;
+    server sp-hk.example.com:10091 max_fails=3 fail_timeout=30s;
+}
 
-        ssl_certificate /usr/local/soga/spcloud.crt; 
-        ssl_certificate_key /usr/local/soga/privatesp.key; 
-        ssl_session_cache   shared:SSL:10m;            
-                                                       
-        ssl_session_timeout 10m;
-        proxy_connect_timeout 5s;  # 与被代理服务器建立连接的超时时间为5s
-    	proxy_timeout 20s;   # 获取被代理服务器的响应最大超时时间为20s
-        proxy_next_upstream on;  # 当被代理的服务器返回错误或超时时，将未返回响应的客户端连接请求传递给upstream中的下一个服务器
-        proxy_next_upstream_tries 3;   # 转发尝试请求最多3次
-        proxy_next_upstream_timeout 10s;    # 总尝试超时时间为10s
-        proxy_socket_keepalive on;  # 开启SO_KEEPALIVE选项进行心跳检测
-        proxy_protocol    on;
-        proxy_pass        sphk;
-    }
-    server {
-        listen              443 ssl;                   
-        server_name spctw.1234567890spcloud.com;
-        ssl_protocols       TLSv1.2 TLSv1.3;      
+upstream spsg {
+    hash $remote_addr consistent;
+    dynamic_resolve fallback=stale fail_timeout=30s;
+    server sp-sg.example.com:10091 max_fails=3 fail_timeout=30s;
+}
 
-        ssl_certificate /usr/local/soga/spcloud.crt; 
-        ssl_certificate_key /usr/local/soga/privatesp.key; 
-        ssl_session_cache   shared:SSL:10m;            
-                                                       
-        ssl_session_timeout 10m;
-        proxy_connect_timeout 5s;  # 与被代理服务器建立连接的超时时间为5s
-    	proxy_timeout 20s;   # 获取被代理服务器的响应最大超时时间为20s
-        proxy_next_upstream on;  # 当被代理的服务器返回错误或超时时，将未返回响应的客户端连接请求传递给upstream中的下一个服务器
-        proxy_next_upstream_tries 3;   # 转发尝试请求最多3次
-        proxy_next_upstream_timeout 10s;    # 总尝试超时时间为10s
-        proxy_socket_keepalive on;  # 开启SO_KEEPALIVE选项进行心跳检测
-        proxy_protocol    on;
-        proxy_pass        sptw;
-    }
-    server {
-        listen              443 ssl;                   
-        server_name spcsg.1234567890spcloud.com;
-        ssl_protocols       TLSv1.2 TLSv1.3;      
+upstream spjp {
+    hash $remote_addr consistent;
+    dynamic_resolve fallback=stale fail_timeout=30s;
+    server sp-jp1.example.com:10091 max_fails=3 fail_timeout=30s;
+    server sp-jp2.example.com:10091 max_fails=3 fail_timeout=30s;
+}
 
-        ssl_certificate /usr/local/soga/spcloud.crt; 
-        ssl_certificate_key /usr/local/soga/privatesp.key; 
-        ssl_session_cache   shared:SSL:10m;            
-                                                       
-        ssl_session_timeout 10m;
-        proxy_connect_timeout 5s;  # 与被代理服务器建立连接的超时时间为5s
-        proxy_timeout 20s;   # 获取被代理服务器的响应最大超时时间为20s
-        proxy_next_upstream on;  # 当被代理的服务器返回错误或超时时，将未返回响应的客户端连接请求传递给upstream中的下一个服务器
-        proxy_next_upstream_tries 3;   # 转发尝试请求最多3次
-        proxy_next_upstream_timeout 10s;    # 总尝试超时时间为10s
-        proxy_socket_keepalive on;  # 开启SO_KEEPALIVE选项进行心跳检测
-        proxy_protocol    on;
-        proxy_pass        spsg;
-    }
-    server {
-        listen              443 ssl;                   
-        server_name spcjp.1234567890spcloud.com;
-        ssl_protocols       TLSv1.2 TLSv1.3;      
+upstream spuk {
+    hash $remote_addr consistent;
+    dynamic_resolve fallback=stale fail_timeout=30s;
+    server sp-uk.example.com:10091 max_fails=3 fail_timeout=30s;
+}
 
-        ssl_certificate /usr/local/soga/spcloud.crt; 
-        ssl_certificate_key /usr/local/soga/privatesp.key; 
-        ssl_session_cache   shared:SSL:10m;            
-                                                       
-        ssl_session_timeout 10m;
-        proxy_connect_timeout 5s;  # 与被代理服务器建立连接的超时时间为5s
-        proxy_timeout 20s;   # 获取被代理服务器的响应最大超时时间为20s
-        proxy_next_upstream on;  # 当被代理的服务器返回错误或超时时，将未返回响应的客户端连接请求传递给upstream中的下一个服务器
-        proxy_next_upstream_tries 3;   # 转发尝试请求最多3次
-        proxy_next_upstream_timeout 10s;    # 总尝试超时时间为10s
-        proxy_socket_keepalive on;  # 开启SO_KEEPALIVE选项进行心跳检测
-        proxy_protocol    on;
-        proxy_pass        spjp;
-    }
-    server {
-        listen              443 ssl;                   
-        server_name spckr.1234567890spcloud.com;
-        ssl_protocols       TLSv1.2 TLSv1.3;      
+upstream spus {
+    hash $remote_addr consistent;
+    dynamic_resolve fallback=stale fail_timeout=30s;
+    server sp-us.example.com:10091 max_fails=3 fail_timeout=30s;
+}
 
-        ssl_certificate /usr/local/soga/spcloud.crt; 
-        ssl_certificate_key /usr/local/soga/privatesp.key; 
-        ssl_session_cache   shared:SSL:10m;            
-                                                       
-        ssl_session_timeout 10m;
-        proxy_connect_timeout 5s;  # 与被代理服务器建立连接的超时时间为5s
-        proxy_timeout 20s;   # 获取被代理服务器的响应最大超时时间为20s
-        proxy_next_upstream on;  # 当被代理的服务器返回错误或超时时，将未返回响应的客户端连接请求传递给upstream中的下一个服务器
-        proxy_next_upstream_tries 3;   # 转发尝试请求最多3次
-        proxy_next_upstream_timeout 10s;    # 总尝试超时时间为10s
-        proxy_socket_keepalive on;  # 开启SO_KEEPALIVE选项进行心跳检测
-        proxy_protocol    on;
-        proxy_pass        spkr;
-    }
-    server {
-        listen              443 ssl;                   
-        server_name spcus.1234567890spcloud.com;
-        ssl_protocols       TLSv1.2 TLSv1.3;      
+upstream spde {
+    hash $remote_addr consistent;
+    dynamic_resolve fallback=stale fail_timeout=30s;
+    server sp-de.example.com:10091 max_fails=3 fail_timeout=30s;
+}
 
-        ssl_certificate /usr/local/soga/spcloud.crt; 
-        ssl_certificate_key /usr/local/soga/privatesp.key; 
-        ssl_session_cache   shared:SSL:10m;            
-                                                       
-        ssl_session_timeout 10m;
-        proxy_connect_timeout 5s;  # 与被代理服务器建立连接的超时时间为5s
-        proxy_timeout 20s;   # 获取被代理服务器的响应最大超时时间为20s
-        proxy_next_upstream on;  # 当被代理的服务器返回错误或超时时，将未返回响应的客户端连接请求传递给upstream中的下一个服务器
-        proxy_next_upstream_tries 3;   # 转发尝试请求最多3次
-        proxy_next_upstream_timeout 10s;    # 总尝试超时时间为10s
-        proxy_socket_keepalive on;  # 开启SO_KEEPALIVE选项进行心跳检测
-        proxy_protocol    on;
-        proxy_pass        spus;
-    }
-    server {
-        listen              443 ssl;                   
-        server_name spcuk.1234567890spcloud.com;
-        ssl_protocols       TLSv1.2 TLSv1.3;      
+upstream sptw {
+    hash $remote_addr consistent;
+    dynamic_resolve fallback=stale fail_timeout=30s;
+    server sp-tw.example.com:10091 max_fails=3 fail_timeout=30s;
+}
 
-        ssl_certificate /usr/local/soga/spcloud.crt; 
-        ssl_certificate_key /usr/local/soga/privatesp.key; 
-        ssl_session_cache   shared:SSL:10m;            
-                                                       
-        ssl_session_timeout 10m;
-        proxy_connect_timeout 5s;  # 与被代理服务器建立连接的超时时间为5s
-        proxy_timeout 20s;   # 获取被代理服务器的响应最大超时时间为20s
-        proxy_next_upstream on;  # 当被代理的服务器返回错误或超时时，将未返回响应的客户端连接请求传递给upstream中的下一个服务器
-        proxy_next_upstream_tries 3;   # 转发尝试请求最多3次
-        proxy_next_upstream_timeout 10s;    # 总尝试超时时间为10s
-        proxy_socket_keepalive on;  # 开启SO_KEEPALIVE选项进行心跳检测
-        proxy_protocol    on;
-        proxy_pass        spuk;
-    }
-    server {
-        listen              443 ssl;                   
-        server_name spcde.1234567890spcloud.com;
-        ssl_protocols       TLSv1.2 TLSv1.3;      
+upstream spin {
+    hash $remote_addr consistent;
+    dynamic_resolve fallback=stale fail_timeout=30s;
+    server sp-in.example.com:10091 max_fails=3 fail_timeout=30s;
+}
 
-        ssl_certificate /usr/local/soga/spcloud.crt; 
-        ssl_certificate_key /usr/local/soga/privatesp.key; 
-        ssl_session_cache   shared:SSL:10m;            
-                                                       
-        ssl_session_timeout 10m;
-        proxy_connect_timeout 5s;  # 与被代理服务器建立连接的超时时间为5s
-        proxy_timeout 20s;   # 获取被代理服务器的响应最大超时时间为20s
-        proxy_next_upstream on;  # 当被代理的服务器返回错误或超时时，将未返回响应的客户端连接请求传递给upstream中的下一个服务器
-        proxy_next_upstream_tries 3;   # 转发尝试请求最多3次
-        proxy_next_upstream_timeout 10s;    # 总尝试超时时间为10s
-        proxy_socket_keepalive on;  # 开启SO_KEEPALIVE选项进行心跳检测
-        proxy_protocol    on;
-        proxy_pass        spde;
-    }
-    server {
-        listen              443 ssl;                   
-        server_name tttus.1234567890spcloud.com;
-        ssl_protocols       TLSv1.2 TLSv1.3;      
+upstream spkr {
+    hash $remote_addr consistent;
+    dynamic_resolve fallback=stale fail_timeout=30s;
+    server sp-kr.example.com:10091 max_fails=3 fail_timeout=30s;
+}
 
-        ssl_certificate /usr/local/soga/spcloud.crt; 
-        ssl_certificate_key /usr/local/soga/privatesp.key; 
-        ssl_session_cache   shared:SSL:10m;            
-                                                       
-        ssl_session_timeout 10m;
-        proxy_connect_timeout 5s;  # 与被代理服务器建立连接的超时时间为5s
-        proxy_timeout 20s;   # 获取被代理服务器的响应最大超时时间为20s
-        proxy_next_upstream on;  # 当被代理的服务器返回错误或超时时，将未返回响应的客户端连接请求传递给upstream中的下一个服务器
-        proxy_next_upstream_tries 3;   # 转发尝试请求最多3次
-        proxy_next_upstream_timeout 10s;    # 总尝试超时时间为10s
-        proxy_socket_keepalive on;  # 开启SO_KEEPALIVE选项进行心跳检测
-        proxy_protocol    on;
-        proxy_pass        tikus;
-    }
-    server {
-        listen              443 ssl;                   
-        server_name tttuk.1234567890spcloud.com;
-        ssl_protocols       TLSv1.2 TLSv1.3;      
+upstream spca {
+    hash $remote_addr consistent;
+    dynamic_resolve fallback=stale fail_timeout=30s;
+    server sp-ca.example.com:10091 max_fails=3 fail_timeout=30s;
+}
 
-        ssl_certificate /usr/local/soga/spcloud.crt; 
-        ssl_certificate_key /usr/local/soga/privatesp.key; 
-        ssl_session_cache   shared:SSL:10m;            
-                                                       
-        ssl_session_timeout 10m;
-        proxy_connect_timeout 5s;  # 与被代理服务器建立连接的超时时间为5s
-        proxy_timeout 20s;   # 获取被代理服务器的响应最大超时时间为20s
-        proxy_next_upstream on;  # 当被代理的服务器返回错误或超时时，将未返回响应的客户端连接请求传递给upstream中的下一个服务器
-        proxy_next_upstream_tries 3;   # 转发尝试请求最多3次
-        proxy_next_upstream_timeout 10s;    # 总尝试超时时间为10s
-        proxy_socket_keepalive on;  # 开启SO_KEEPALIVE选项进行心跳检测
-        proxy_protocol    on;
-        proxy_pass       tikuk;
-    }
-    server {
-        listen              443 ssl;                   
-        server_name tttusshs.1234567890spcloud.com;
-        ssl_protocols       TLSv1.2 TLSv1.3;      
+map $ssl_preread_server_name $backend_pool {
+    sphk.xn--e6q56cu20k.com    sphk;
+    spsg.xn--e6q56cu20k.com    spsg;
+    spjp.xn--e6q56cu20k.com    spjp;
+    spuk.xn--e6q56cu20k.com    spuk;
+    spus.xn--e6q56cu20k.com    spus;
+    spde.xn--e6q56cu20k.com    spde;
+    sptw.xn--e6q56cu20k.com    sptw;
+    spin.xn--e6q56cu20k.com    spin;
+    spkr.xn--e6q56cu20k.com    spkr;
+    spca.xn--e6q56cu20k.com    spca;
+}
 
-        ssl_certificate /usr/local/soga/spcloud.crt; 
-        ssl_certificate_key /usr/local/soga/privatesp.key; 
-        ssl_session_cache   shared:SSL:10m;            
-                                                       
-        ssl_session_timeout 10m;
-        proxy_connect_timeout 5s;  # 与被代理服务器建立连接的超时时间为5s
-        proxy_timeout 20s;   # 获取被代理服务器的响应最大超时时间为20s
-        proxy_next_upstream on;  # 当被代理的服务器返回错误或超时时，将未返回响应的客户端连接请求传递给upstream中的下一个服务器
-        proxy_next_upstream_tries 3;   # 转发尝试请求最多3次
-        proxy_next_upstream_timeout 10s;    # 总尝试超时时间为10s
-        proxy_socket_keepalive on;  # 开启SO_KEEPALIVE选项进行心跳检测
-        proxy_protocol    on;
-        proxy_pass       tikusshs;
-    }
-    server {
-        listen              443 ssl;                   
-        server_name spcca.1234567890spcloud.com;
-        ssl_protocols       TLSv1.2 TLSv1.3;      
+# 通用SSL和代理配置
+include /usr/local/nginx/mytcp/ssl_common.conf;
+include /usr/local/nginx/mytcp/proxy_common.conf;
 
-        ssl_certificate /usr/local/soga/spcloud.crt; 
-        ssl_certificate_key /usr/local/soga/privatesp.key; 
-        ssl_session_cache   shared:SSL:10m;            
-                                                       
-        ssl_session_timeout 10m;
-        proxy_connect_timeout 5s;  # 与被代理服务器建立连接的超时时间为5s
-        proxy_timeout 20s;   # 获取被代理服务器的响应最大超时时间为20s
-        proxy_next_upstream on;  # 当被代理的服务器返回错误或超时时，将未返回响应的客户端连接请求传递给upstream中的下一个服务器
-        proxy_next_upstream_tries 3;   # 转发尝试请求最多3次
-        proxy_next_upstream_timeout 10s;    # 总尝试超时时间为10s
-        proxy_socket_keepalive on;  # 开启SO_KEEPALIVE选项进行心跳检测
-        proxy_protocol    on;
-        proxy_pass       spca;
-    }
-    server {
-        listen              443 ssl;                   
-        server_name tttusny.1234567890spcloud.com;
-        ssl_protocols       TLSv1.2 TLSv1.3;      
-
-        ssl_certificate /usr/local/soga/spcloud.crt; 
-        ssl_certificate_key /usr/local/soga/privatesp.key; 
-        ssl_session_cache   shared:SSL:10m;            
-                                                       
-        ssl_session_timeout 10m;
-        proxy_connect_timeout 5s;  # 与被代理服务器建立连接的超时时间为5s
-        proxy_timeout 20s;   # 获取被代理服务器的响应最大超时时间为20s
-        proxy_next_upstream on;  # 当被代理的服务器返回错误或超时时，将未返回响应的客户端连接请求传递给upstream中的下一个服务器
-        proxy_next_upstream_tries 3;   # 转发尝试请求最多3次
-        proxy_next_upstream_timeout 10s;    # 总尝试超时时间为10s
-        proxy_socket_keepalive on;  # 开启SO_KEEPALIVE选项进行心跳检测
-        proxy_protocol    on;
-        proxy_pass       tikusny;
-    }
-    server {
-        listen              3389 ;                   
-        server_name yyyde.sankuaiqianshao.com;
-        proxy_pass       tikde;
-    }
+# 统一的服务器配置
+server {
+    listen 443 ssl;
+    server_name *.xn--e6q56cu20k.com;
+    proxy_pass $backend_pool;
+}
