--- a/spt.conf
+++ b/spt.conf
@@ -2,7 +2,7 @@
 upstream sphk {
     hash $remote_addr consistent;
     dynamic_resolve fallback=stale fail_timeout=30s;
-    server sp-hk.example.com:10091 max_fails=3 fail_timeout=30s;
+    server 152.53.37.160:10011 max_fails=3 fail_timeout=30s;
 }
 
 upstream spsg {
