--- a/spt.conf
+++ b/spt.conf
@@ -1,52 +1,52 @@
 # 上游服务器配置
 upstream sphk {
-    consistent_hash $remote_addr;
+    hash $remote_addr consistent;
     server 152.53.37.160:10011 id=1001 weight=3 max_fails=3 fail_timeout=30s;
 }
 
 upstream spsg {
-    consistent_hash $remote_addr;
+    hash $remote_addr consistent;
     server sp-sg.example.com:10091 max_fails=3 fail_timeout=30s;
 }
 
 upstream spjp {
-    consistent_hash $remote_addr;
+    hash $remote_addr consistent;
     server sp-jp1.example.com:10091 max_fails=3 fail_timeout=30s;
     server sp-jp2.example.com:10091 max_fails=3 fail_timeout=30s;
 }
 
 upstream spuk {
-    consistent_hash $remote_addr;
+    hash $remote_addr consistent;
     server sp-uk.example.com:10091 max_fails=3 fail_timeout=30s;
 }
 
 upstream spus {
-    consistent_hash $remote_addr;
+    hash $remote_addr consistent;
     server sp-us.example.com:10091 max_fails=3 fail_timeout=30s;
 }
 
 upstream spde {
-    consistent_hash $remote_addr;
+    hash $remote_addr consistent;
     server sp-de.example.com:10091 max_fails=3 fail_timeout=30s;
 }
 
 upstream sptw {
-    consistent_hash $remote_addr;
+    hash $remote_addr consistent;
     server sp-tw.example.com:10091 max_fails=3 fail_timeout=30s;
 }
 
 upstream spin {
-    consistent_hash $remote_addr;
+    hash $remote_addr consistent;
     server sp-in.example.com:10091 max_fails=3 fail_timeout=30s;
 }
 
 upstream spkr {
-    consistent_hash $remote_addr;
+    hash $remote_addr consistent;
     server sp-kr.example.com:10091 max_fails=3 fail_timeout=30s;
 }
 
 upstream spca {
-    consistent_hash $remote_addr;
+    hash $remote_addr consistent;
     server sp-ca.example.com:10091 max_fails=3 fail_timeout=30s;
 }
 
