--- a/spt.conf
+++ b/spt.conf
@@ -1,7 +1,7 @@
 # 上游服务器配置
 upstream sphk {
     hash $remote_addr consistent;
-    server 152.53.37.160:10011 id=1001 weight=3 max_fails=3 fail_timeout=30s;
+    server 152.53.37.160:10011 max_fails=3 fail_timeout=30s;
 }
 
 upstream spsg {
