--- a/spt.conf
+++ b/spt.conf
@@ -6,48 +6,48 @@ upstream sphk {
 
 upstream spsg {
     hash $remote_addr consistent;
-    server sp-sg.example.com:10091 max_fails=3 fail_timeout=30s;
+    server 152.53.37.160:10091 max_fails=3 fail_timeout=30s;
 }
 
 upstream spjp {
     hash $remote_addr consistent;
-    server sp-jp1.example.com:10091 max_fails=3 fail_timeout=30s;
-    server sp-jp2.example.com:10091 max_fails=3 fail_timeout=30s;
+    server 152.53.37.160:10091 max_fails=3 fail_timeout=30s;
+    server 152.53.37.162:10091 max_fails=3 fail_timeout=30s;
 }
 
 upstream spuk {
     hash $remote_addr consistent;
-    server sp-uk.example.com:10091 max_fails=3 fail_timeout=30s;
+    server 152.53.37.160:10091 max_fails=3 fail_timeout=30s;
 }
 
 upstream spus {
     hash $remote_addr consistent;
-    server sp-us.example.com:10091 max_fails=3 fail_timeout=30s;
+    server 152.53.37.160:10091 max_fails=3 fail_timeout=30s;
 }
 
 upstream spde {
     hash $remote_addr consistent;
-    server sp-de.example.com:10091 max_fails=3 fail_timeout=30s;
+    server 152.53.37.160:10091 max_fails=3 fail_timeout=30s;
 }
 
 upstream sptw {
     hash $remote_addr consistent;
-    server sp-tw.example.com:10091 max_fails=3 fail_timeout=30s;
+    server 152.53.37.160:10091 max_fails=3 fail_timeout=30s;
 }
 
 upstream spin {
     hash $remote_addr consistent;
-    server sp-in.example.com:10091 max_fails=3 fail_timeout=30s;
+    server 152.53.37.160:10091 max_fails=3 fail_timeout=30s;
 }
 
 upstream spkr {
     hash $remote_addr consistent;
-    server sp-kr.example.com:10091 max_fails=3 fail_timeout=30s;
+    server 152.53.37.160:10091 max_fails=3 fail_timeout=30s;
 }
 
 upstream spca {
     hash $remote_addr consistent;
-    server sp-ca.example.com:10091 max_fails=3 fail_timeout=30s;
+    server 152.53.37.160:10091 max_fails=3 fail_timeout=30s;
 }
 
 map $ssl_preread_server_name $backend_pool {
