--- a/spt.conf
+++ b/spt.conf
@@ -50,26 +50,102 @@ upstream spca {
     server 152.53.37.160:10091 max_fails=3 fail_timeout=30s;
 }
 
-map $ssl_preread_server_name $backend_pool {
-    sphk.xn--e6q56cu20k.com    sphk;
-    spsg.xn--e6q56cu20k.com    spsg;
-    spjp.xn--e6q56cu20k.com    spjp;
-    spuk.xn--e6q56cu20k.com    spuk;
-    spus.xn--e6q56cu20k.com    spus;
-    spde.xn--e6q56cu20k.com    spde;
-    sptw.xn--e6q56cu20k.com    sptw;
-    spin.xn--e6q56cu20k.com    spin;
-    spkr.xn--e6q56cu20k.com    spkr;
-    spca.xn--e6q56cu20k.com    spca;
+# SSL 预读服务器配置
+server {
+    listen 443;
+    ssl_preread on;  # 启用 SSL 预读
+    
+    # 根据 SNI 进行路由
+    proxy_pass $ssl_preread_server_name;
 }
 
-# 通用SSL和代理配置
-include /usr/local/nginx/mytcp/ssl_common.conf;
-include /usr/local/nginx/mytcp/proxy_common.conf;
-
-# 统一的服务器配置
+# 各个区域的服务器配置
 server {
     listen 443 ssl;
-    server_name *.xn--e6q56cu20k.com;
-    proxy_pass $backend_pool;
+    ssl_preread off;
+    server_name sphk.xn--e6q56cu20k.com;
+    proxy_pass sphk;
+    include /usr/local/nginx/mytcp/ssl_common.conf;
+    include /usr/local/nginx/mytcp/proxy_common.conf;
+}
+
+server {
+    listen 443 ssl;
+    ssl_preread off;
+    server_name spsg.xn--e6q56cu20k.com;
+    proxy_pass spsg;
+    include /usr/local/nginx/mytcp/ssl_common.conf;
+    include /usr/local/nginx/mytcp/proxy_common.conf;
+}
+
+server {
+    listen 443 ssl;
+    ssl_preread off;
+    server_name spjp.xn--e6q56cu20k.com;
+    proxy_pass spjp;
+    include /usr/local/nginx/mytcp/ssl_common.conf;
+    include /usr/local/nginx/mytcp/proxy_common.conf;
+}
+
+server {
+    listen 443 ssl;
+    ssl_preread off;
+    server_name spuk.xn--e6q56cu20k.com;
+    proxy_pass spuk;
+    include /usr/local/nginx/mytcp/ssl_common.conf;
+    include /usr/local/nginx/mytcp/proxy_common.conf;
+}
+
+server {
+    listen 443 ssl;
+    ssl_preread off;
+    server_name spus.xn--e6q56cu20k.com;
+    proxy_pass spus;
+    include /usr/local/nginx/mytcp/ssl_common.conf;
+    include /usr/local/nginx/mytcp/proxy_common.conf;
+}
+
+server {
+    listen 443 ssl;
+    ssl_preread off;
+    server_name spde.xn--e6q56cu20k.com;
+    proxy_pass spde;
+    include /usr/local/nginx/mytcp/ssl_common.conf;
+    include /usr/local/nginx/mytcp/proxy_common.conf;
+}
+
+server {
+    listen 443 ssl;
+    ssl_preread off;
+    server_name sptw.xn--e6q56cu20k.com;
+    proxy_pass sptw;
+    include /usr/local/nginx/mytcp/ssl_common.conf;
+    include /usr/local/nginx/mytcp/proxy_common.conf;
+}
+
+server {
+    listen 443 ssl;
+    ssl_preread off;
+    server_name spin.xn--e6q56cu20k.com;
+    proxy_pass spin;
+    include /usr/local/nginx/mytcp/ssl_common.conf;
+    include /usr/local/nginx/mytcp/proxy_common.conf;
+}
+
+server {
+    listen 443 ssl;
+    ssl_preread off;
+    server_name spkr.xn--e6q56cu20k.com;
+    proxy_pass spkr;
+    include /usr/local/nginx/mytcp/ssl_common.conf;
+    include /usr/local/nginx/mytcp/proxy_common.conf;
+}
+
+server {
+    listen 443 ssl;
+    ssl_preread off;
+    server_name spca.xn--e6q56cu20k.com;
+    proxy_pass spca;
+    include /usr/local/nginx/mytcp/ssl_common.conf;
+    include /usr/local/nginx/mytcp/proxy_common.conf;
 }
