--- a/spt.conf
+++ b/spt.conf
@@ -50,19 +50,10 @@ upstream spca {
     server 152.53.37.160:10091 max_fails=3 fail_timeout=30s;
 }
 
-# SSL 预读服务器配置
-server {
-    listen 443;
-    ssl_preread on;  # 启用 SSL 预读
-    
-    # 根据 SNI 进行路由
-    proxy_pass $ssl_preread_server_name;
-}
-
 # 各个区域的服务器配置
 server {
     listen 443 ssl;
-    ssl_preread off;
+    ssl_protocols       TLSv1.2 TLSv1.3;    
     server_name sphk.xn--e6q56cu20k.com;
     proxy_pass sphk;
     include /usr/local/nginx/mytcp/ssl_common.conf;
@@ -71,7 +62,7 @@ server {
 
 server {
     listen 443 ssl;
-    ssl_preread off;
+    ssl_protocols       TLSv1.2 TLSv1.3;    
     server_name spsg.xn--e6q56cu20k.com;
     proxy_pass spsg;
     include /usr/local/nginx/mytcp/ssl_common.conf;
@@ -80,7 +71,7 @@ server {
 
 server {
     listen 443 ssl;
-    ssl_preread off;
+    ssl_protocols       TLSv1.2 TLSv1.3;    
     server_name spjp.xn--e6q56cu20k.com;
     proxy_pass spjp;
     include /usr/local/nginx/mytcp/ssl_common.conf;
@@ -89,7 +80,7 @@ server {
 
 server {
     listen 443 ssl;
-    ssl_preread off;
+    ssl_protocols       TLSv1.2 TLSv1.3;    
     server_name spuk.xn--e6q56cu20k.com;
     proxy_pass spuk;
     include /usr/local/nginx/mytcp/ssl_common.conf;
@@ -98,7 +89,7 @@ server {
 
 server {
     listen 443 ssl;
-    ssl_preread off;
+    ssl_protocols       TLSv1.2 TLSv1.3;    
     server_name spus.xn--e6q56cu20k.com;
     proxy_pass spus;
     include /usr/local/nginx/mytcp/ssl_common.conf;
@@ -107,7 +98,7 @@ server {
 
 server {
     listen 443 ssl;
-    ssl_preread off;
+    ssl_protocols       TLSv1.2 TLSv1.3;    
     server_name spde.xn--e6q56cu20k.com;
     proxy_pass spde;
     include /usr/local/nginx/mytcp/ssl_common.conf;
@@ -116,7 +107,7 @@ server {
 
 server {
     listen 443 ssl;
-    ssl_preread off;
+    ssl_protocols       TLSv1.2 TLSv1.3;    
     server_name sptw.xn--e6q56cu20k.com;
     proxy_pass sptw;
     include /usr/local/nginx/mytcp/ssl_common.conf;
@@ -125,7 +116,7 @@ server {
 
 server {
     listen 443 ssl;
-    ssl_preread off;
+    ssl_protocols       TLSv1.2 TLSv1.3;    
     server_name spin.xn--e6q56cu20k.com;
     proxy_pass spin;
     include /usr/local/nginx/mytcp/ssl_common.conf;
@@ -134,7 +125,7 @@ server {
 
 server {
     listen 443 ssl;
-    ssl_preread off;
+    ssl_protocols       TLSv1.2 TLSv1.3;    
     server_name spkr.xn--e6q56cu20k.com;
     proxy_pass spkr;
     include /usr/local/nginx/mytcp/ssl_common.conf;
@@ -143,7 +134,7 @@ server {
 
 server {
     listen 443 ssl;
-    ssl_preread off;
+    ssl_protocols       TLSv1.2 TLSv1.3;    
     server_name spca.xn--e6q56cu20k.com;
     proxy_pass spca;
     include /usr/local/nginx/mytcp/ssl_common.conf;
