--- a/spt.conf
+++ b/spt.conf
@@ -51,22 +51,11 @@ upstream spca {
 
 # 各个区域的服务器配置
 server {
-        listen              443 ssl;                   
-        server_name sphk.xn--e6q56cu20k.com;
-        ssl_protocols       TLSv1.2 TLSv1.3;      
-        
-        ssl_certificate /usr/local/nginx/ngcrt.crt;
-        ssl_certificate_key /usr/local/nginx/ng.key; 
-        ssl_session_cache   shared:SSL:10m;                                                          
-        ssl_session_timeout 10m;
-        proxy_connect_timeout 5s;  # 与被代理服务器建立连接的超时时间为5s
-      proxy_timeout 20s;   # 获取被代理服务器的响应最大超时时间为20s
-        proxy_next_upstream on;  # 当被代理的服务器返回错误或超时时，将未返回响应的客户端连接请求传递给upstream中的下一个服务器
-        proxy_next_upstream_tries 3;   # 转发尝试请求最多3次
-        proxy_next_upstream_timeout 10s;    # 总尝试超时时间为10s
-        proxy_socket_keepalive on;  # 开启SO_KEEPALIVE选项进行心跳检测
-        proxy_protocol    on;
-        proxy_pass        sphk;
+    listen 443 ssl;   
+    server_name sphk.xn--e6q56cu20k.com;
+    proxy_pass sphk;
+    include /usr/local/nginx/mytcp/ssl_common.conf;
+    include /usr/local/nginx/mytcp/proxy_common.conf;
 }
 
 server {
