--- a/spt.conf
+++ b/spt.conf
@@ -52,6 +52,8 @@ upstream spca {
 # 各个区域的服务器配置
 server {
     listen 443 ssl;   
+    ssl_ciphers 'TLS_AES_128_GCM_SHA256:TLS_AES_256_GCM_SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-RSA-AES128-GCM-SHA256';
+    ssl_prefer_server_ciphers on;  # 优先使用服务器端配置的加密套件
     server_name sphk.xn--e6q56cu20k.com;
     proxy_pass sphk;
     include /usr/local/nginx/mytcp/ssl_common.conf;
