--- a/spt.conf
+++ b/spt.conf
@@ -62,6 +62,8 @@ server {
 
 server {
     listen 443 ssl;  
+    ssl_ciphers 'TLS_AES_128_GCM_SHA256:TLS_AES_256_GCM_SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-RSA-AES128-GCM-SHA256';
+    ssl_prefer_server_ciphers on;  # 优先使用服务器端配置的加密套件
     server_name spsg.xn--e6q56cu20k.com;
     proxy_pass spsg;
     include /usr/local/nginx/mytcp/ssl_common.conf;
@@ -70,6 +72,8 @@ server {
 
 server {
     listen 443 ssl;   
+    ssl_ciphers 'TLS_AES_128_GCM_SHA256:TLS_AES_256_GCM_SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-RSA-AES128-GCM-SHA256';
+    ssl_prefer_server_ciphers on;  # 优先使用服务器端配置的加密套件
     server_name spjp.xn--e6q56cu20k.com;
     proxy_pass spjp;
     include /usr/local/nginx/mytcp/ssl_common.conf;
@@ -78,6 +82,8 @@ server {
 
 server {
     listen 443 ssl;  
+    ssl_ciphers 'TLS_AES_128_GCM_SHA256:TLS_AES_256_GCM_SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-RSA-AES128-GCM-SHA256';
+    ssl_prefer_server_ciphers on;  # 优先使用服务器端配置的加密套件
     server_name spuk.xn--e6q56cu20k.com;
     proxy_pass spuk;
     include /usr/local/nginx/mytcp/ssl_common.conf;
@@ -86,6 +92,8 @@ server {
 
 server {
     listen 443 ssl;  
+    ssl_ciphers 'TLS_AES_128_GCM_SHA256:TLS_AES_256_GCM_SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-RSA-AES128-GCM-SHA256';
+    ssl_prefer_server_ciphers on;  # 优先使用服务器端配置的加密套件
     server_name spus.xn--e6q56cu20k.com;
     proxy_pass spus;
     include /usr/local/nginx/mytcp/ssl_common.conf;
@@ -94,6 +102,8 @@ server {
 
 server {
     listen 443 ssl;  
+    ssl_ciphers 'TLS_AES_128_GCM_SHA256:TLS_AES_256_GCM_SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-RSA-AES128-GCM-SHA256';
+    ssl_prefer_server_ciphers on;  # 优先使用服务器端配置的加密套件
     server_name spde.xn--e6q56cu20k.com;
     proxy_pass spde;
     include /usr/local/nginx/mytcp/ssl_common.conf;
@@ -102,6 +112,8 @@ server {
 
 server {
     listen 443 ssl;   
+    ssl_ciphers 'TLS_AES_128_GCM_SHA256:TLS_AES_256_GCM_SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-RSA-AES128-GCM-SHA256';
+    ssl_prefer_server_ciphers on;  # 优先使用服务器端配置的加密套件
     server_name sptw.xn--e6q56cu20k.com;
     proxy_pass sptw;
     include /usr/local/nginx/mytcp/ssl_common.conf;
@@ -110,6 +122,8 @@ server {
 
 server {
     listen 443 ssl;  
+    ssl_ciphers 'TLS_AES_128_GCM_SHA256:TLS_AES_256_GCM_SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-RSA-AES128-GCM-SHA256';
+    ssl_prefer_server_ciphers on;  # 优先使用服务器端配置的加密套件
     server_name spin.xn--e6q56cu20k.com;
     proxy_pass spin;
     include /usr/local/nginx/mytcp/ssl_common.conf;
@@ -118,6 +132,8 @@ server {
 
 server {
     listen 443 ssl; 
+    ssl_ciphers 'TLS_AES_128_GCM_SHA256:TLS_AES_256_GCM_SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-RSA-AES128-GCM-SHA256';
+    ssl_prefer_server_ciphers on;  # 优先使用服务器端配置的加密套件
     server_name spkr.xn--e6q56cu20k.com;
     proxy_pass spkr;
     include /usr/local/nginx/mytcp/ssl_common.conf;
@@ -125,7 +141,9 @@ server {
 }
 
 server {
-    listen 443 ssl;  
+    listen 443 ssl; 
+    ssl_ciphers 'TLS_AES_128_GCM_SHA256:TLS_AES_256_GCM_SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-RSA-AES128-GCM-SHA256';
+    ssl_prefer_server_ciphers on;  # 优先使用服务器端配置的加密套件
     server_name spca.xn--e6q56cu20k.com;
     proxy_pass spca;
     include /usr/local/nginx/mytcp/ssl_common.conf;
