--- a/spt.conf
+++ b/spt.conf
@@ -1,6 +1,6 @@
 upstream sphk {
     hash $remote_addr consistent;
-    server 2a13:b487:4f01:ae86::b4:10011 max_fails=3 fail_timeout=30s;
+    server [2a13:b487:4f01:ae86::b4]:10011 max_fails=3 fail_timeout=30s;
 }
 
 upstream spsg {
