--- a/spt.conf
+++ b/spt.conf
@@ -1,11 +1,11 @@
-upstream sphk {
+upstream spao {
     hash $remote_addr consistent;
     server [2a13:b487:4f01:ae86::b4]:10011 max_fails=3 fail_timeout=30s;
 }
 
-upstream spsg {
+upstream spfeilvbin {
     hash $remote_addr consistent;
-    server 193.124.46.3:10091 max_fails=3 fail_timeout=30s;
+    server [2a13:b487:4f06:1314::1d]:10011 max_fails=3 fail_timeout=30s;
 }
 
 upstream spjp {
@@ -54,8 +54,8 @@ server {
     listen 443 ssl;   
     ssl_ciphers 'TLS_AES_128_GCM_SHA256:TLS_AES_256_GCM_SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-RSA-AES128-GCM-SHA256';
     ssl_prefer_server_ciphers on;  # 优先使用服务器端配置的加密套件
-    server_name sphk.xn--e6q56cu20k.com;
-    proxy_pass sphk;
+    server_name spao.xn--e6q56cu20k.com;
+    proxy_pass spao;
     include /usr/local/nginx/mytcp/ssl_common.conf;
     include /usr/local/nginx/mytcp/proxy_common.conf;
 }
@@ -64,8 +64,8 @@ server {
     listen 443 ssl;  
     ssl_ciphers 'TLS_AES_128_GCM_SHA256:TLS_AES_256_GCM_SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-RSA-AES128-GCM-SHA256';
     ssl_prefer_server_ciphers on;  # 优先使用服务器端配置的加密套件
-    server_name spsg.xn--e6q56cu20k.com;
-    proxy_pass spsg;
+    server_name spfeilvbin.xn--e6q56cu20k.com;
+    proxy_pass spfeilvbin;
     include /usr/local/nginx/mytcp/ssl_common.conf;
     include /usr/local/nginx/mytcp/proxy_common.conf;
 }
