--- a/spt.conf
+++ b/spt.conf
@@ -8,10 +8,9 @@ upstream spfeilvbin {
     server [2a13:b487:4f06:1314::1d]:10011 max_fails=3 fail_timeout=30s;
 }
 
-upstream spjp {
+upstream spjianpuzhai {
     hash $remote_addr consistent;
-    server 152.53.37.160:10091 max_fails=3 fail_timeout=30s;
-    server 152.53.37.162:10091 max_fails=3 fail_timeout=30s;
+    server [2a13:b487:4f02:cafe::b5]:10091 max_fails=3 fail_timeout=30s;
 }
 
 upstream spuk {
@@ -74,8 +73,8 @@ server {
     listen 443 ssl;   
     ssl_ciphers 'TLS_AES_128_GCM_SHA256:TLS_AES_256_GCM_SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-RSA-AES128-GCM-SHA256';
     ssl_prefer_server_ciphers on;  # 优先使用服务器端配置的加密套件
-    server_name spjp.xn--e6q56cu20k.com;
-    proxy_pass spjp;
+    server_name spjianpuzhai.xn--e6q56cu20k.com;
+    proxy_pass spjianpuzhai;
     include /usr/local/nginx/mytcp/ssl_common.conf;
     include /usr/local/nginx/mytcp/proxy_common.conf;
 }
