--- a/spt.conf
+++ b/spt.conf
@@ -13,9 +13,9 @@ upstream spjianpuzhai {
     server [2a13:b487:4f02:cafe::b5]:10091 max_fails=3 fail_timeout=30s;
 }
 
-upstream spuk {
+upstream spmiandian {
     hash $remote_addr consistent;
-    server 172.236.30.130:10011 max_fails=3 fail_timeout=30s;
+    server 2a13:b487:4f04::a0:10011 max_fails=3 fail_timeout=30s;
 }
 
 upstream spus {
@@ -83,8 +83,8 @@ server {
     listen 443 ssl;  
     ssl_ciphers 'TLS_AES_128_GCM_SHA256:TLS_AES_256_GCM_SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-RSA-AES128-GCM-SHA256';
     ssl_prefer_server_ciphers on;  # 优先使用服务器端配置的加密套件
-    server_name spuk.xn--e6q56cu20k.com;
-    proxy_pass spuk;
+    server_name spmiandian.xn--e6q56cu20k.com;
+    proxy_pass spmiandian;
     include /usr/local/nginx/mytcp/ssl_common.conf;
     include /usr/local/nginx/mytcp/proxy_common.conf;
 }
