--- a/spt.conf
+++ b/spt.conf
@@ -15,7 +15,7 @@ upstream spjianpuzhai {
 
 upstream spmiandian {
     hash $remote_addr consistent;
-    server 2a13:b487:4f04::a0:10011 max_fails=3 fail_timeout=30s;
+    server [2a13:b487:4f04::a0]:10011 max_fails=3 fail_timeout=30s;
 }
 
 upstream spus {
