--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,9 +5,7 @@ on:
     branches:
       - main
     paths:
-      - '**.dat'
-      - '**.txt'
-      - '**.zip'
+      - '**.conf'
       - '**.json'
       - '**.yaml'
 jobs:
