--- a/spt.conf
+++ b/spt.conf
@@ -10,7 +10,7 @@ upstream spfeilvbin {
 
 upstream spjianpuzhai {
     hash $remote_addr consistent;
-    server [2a13:b487:4f02:cafe::b5]:10091 max_fails=3 fail_timeout=30s;
+    server [2a13:b487:4f02:cafe::b5]:10011 max_fails=3 fail_timeout=30s;
 }
 
 upstream spmiandian {
@@ -18,9 +18,9 @@ upstream spmiandian {
     server [2a13:b487:4f04::a0]:10011 max_fails=3 fail_timeout=30s;
 }
 
-upstream spus {
+upstream sptaiguo {
     hash $remote_addr consistent;
-    server 152.53.37.160:10091 max_fails=3 fail_timeout=30s;
+    server [2a13:b487:4f0d::74]:10011 max_fails=3 fail_timeout=30s;
 }
 
 upstream spde {
@@ -93,8 +93,8 @@ server {
     listen 443 ssl;  
     ssl_ciphers 'TLS_AES_128_GCM_SHA256:TLS_AES_256_GCM_SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-RSA-AES128-GCM-SHA256';
     ssl_prefer_server_ciphers on;  # 优先使用服务器端配置的加密套件
-    server_name spus.xn--e6q56cu20k.com;
-    proxy_pass spus;
+    server_name sptaiguo.xn--e6q56cu20k.com;
+    proxy_pass sptaiguo;
     include /usr/local/nginx/mytcp/ssl_common.conf;
     include /usr/local/nginx/mytcp/proxy_common.conf;
 }
