--- a/spt.conf
+++ b/spt.conf
@@ -23,9 +23,9 @@ upstream sptaiguo {
     server [2a13:b487:4f0d::74]:10011 max_fails=3 fail_timeout=30s;
 }
 
-upstream spde {
+upstream spbalin {
     hash $remote_addr consistent;
-    server 192.81.132.92:10022 max_fails=3 fail_timeout=30s;
+    server [2a13:b487:4f30::25]:10011 max_fails=3 fail_timeout=30s;
 }
 
 upstream sptw {
@@ -103,8 +103,8 @@ server {
     listen 443 ssl;  
     ssl_ciphers 'TLS_AES_128_GCM_SHA256:TLS_AES_256_GCM_SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-RSA-AES128-GCM-SHA256';
     ssl_prefer_server_ciphers on;  # 优先使用服务器端配置的加密套件
-    server_name spde.xn--e6q56cu20k.com;
-    proxy_pass spde;
+    server_name spbalin.xn--e6q56cu20k.com;
+    proxy_pass spbalin;
     include /usr/local/nginx/mytcp/ssl_common.conf;
     include /usr/local/nginx/mytcp/proxy_common.conf;
 }
