--- a/spt.conf
+++ b/spt.conf
@@ -33,9 +33,9 @@ upstream spyinni {
     server [2a13:b487:4f13::63]:10011 max_fails=3 fail_timeout=30s;
 }
 
-upstream spin {
+upstream spyuenan {
     hash $remote_addr consistent;
-    server 152.53.37.160:10091 max_fails=3 fail_timeout=30s;
+    server [2a13:b487:4f1e::f6]:10011 max_fails=3 fail_timeout=30s;
 }
 
 upstream spkr {
@@ -123,8 +123,8 @@ server {
     listen 443 ssl;  
     ssl_ciphers 'TLS_AES_128_GCM_SHA256:TLS_AES_256_GCM_SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-RSA-AES128-GCM-SHA256';
     ssl_prefer_server_ciphers on;  # 优先使用服务器端配置的加密套件
-    server_name spin.xn--e6q56cu20k.com;
-    proxy_pass spin;
+    server_name spyuenan.xn--e6q56cu20k.com;
+    proxy_pass spyuenan;
     include /usr/local/nginx/mytcp/ssl_common.conf;
     include /usr/local/nginx/mytcp/proxy_common.conf;
 }
