--- a/spt.conf
+++ b/spt.conf
@@ -38,14 +38,14 @@ upstream spyuenan {
     server [2a13:b487:4f1e::f6]:10011 max_fails=3 fail_timeout=30s;
 }
 
-upstream spkr {
+upstream spfandigang {
     hash $remote_addr consistent;
-    server 152.53.37.160:10091 max_fails=3 fail_timeout=30s;
+    server [2a13:b487:4f12::bb]:10011 max_fails=3 fail_timeout=30s;
 }
 
-upstream spca {
+upstream spagenting {
     hash $remote_addr consistent;
-    server 152.53.37.160:10091 max_fails=3 fail_timeout=30s;
+    server [2a13:b487:4f16::7b]:10011 max_fails=3 fail_timeout=30s;
 }
 
 # 各个区域的服务器配置
@@ -133,8 +133,8 @@ server {
     listen 443 ssl; 
     ssl_ciphers 'TLS_AES_128_GCM_SHA256:TLS_AES_256_GCM_SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-RSA-AES128-GCM-SHA256';
     ssl_prefer_server_ciphers on;  # 优先使用服务器端配置的加密套件
-    server_name spkr.xn--e6q56cu20k.com;
-    proxy_pass spkr;
+    server_name spfandigang.xn--e6q56cu20k.com;
+    proxy_pass spfandigang;
     include /usr/local/nginx/mytcp/ssl_common.conf;
     include /usr/local/nginx/mytcp/proxy_common.conf;
 }
@@ -143,8 +143,8 @@ server {
     listen 443 ssl; 
     ssl_ciphers 'TLS_AES_128_GCM_SHA256:TLS_AES_256_GCM_SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-RSA-AES128-GCM-SHA256';
     ssl_prefer_server_ciphers on;  # 优先使用服务器端配置的加密套件
-    server_name spca.xn--e6q56cu20k.com;
-    proxy_pass spca;
+    server_name spagenting.xn--e6q56cu20k.com;
+    proxy_pass spagenting;
     include /usr/local/nginx/mytcp/ssl_common.conf;
     include /usr/local/nginx/mytcp/proxy_common.conf;
 }
