--- a/250.conf
+++ b/250.conf
@@ -1,230 +1,150 @@
- upstream sphk {
-    	hash $remote_addr;
-    	server 18.162.120.140:29000 max_fails=3 fail_timeout=30s;
-    }
-    upstream sptw {
-    	hash $remote_addr;
-    	server hinet1.camdvr.org:29001 max_fails=3 fail_timeout=30s;
-    }
-    upstream spsg {
-        hash $remote_addr;
-        server 206.189.150.95:29002 max_fails=3 fail_timeout=30s;
-    }
-    upstream spjp {
-        hash $remote_addr;
-        server 20.222.96.236:29003 max_fails=3 fail_timeout=30s;
-    }
-    upstream spkr {
-        hash $remote_addr;
-        server 103.29.70.98:29001 max_fails=2 fail_timeout=30s;
-    }
-    upstream spus {
-        hash $remote_addr;
-        server 198.74.54.248:29001 max_fails=3 fail_timeout=30s;
-    }
-    upstream spuk {
-        hash $remote_addr;
-        server 212.71.244.165:29006 max_fails=3 fail_timeout=30s;
-    }
-    upstream spde {
-        hash $remote_addr;
-        server 194.195.116.89:29007 max_fails=3 fail_timeout=30s;
-    }
-     upstream tikus {
-        hash $remote_addr;
-        server 198.74.54.248:54321 max_fails=3 fail_timeout=30s;
-    }
-    upstream tikuk {
-        hash $remote_addr;
-        server 212.71.244.165:54321 max_fails=3 fail_timeout=30s;
-    }
-    server {
-        listen              443 ssl;                   
-        server_name spchk.sankuaiqianshao.com;
-        ssl_protocols       TLSv1.2 TLSv1.3;      
+upstream lionao {
+    hash $remote_addr consistent;
+    server [2a13:b487:4f01:ae86::b4]:10011 max_fails=3 fail_timeout=30s;
+}
 
-        ssl_certificate /usr/local/soga/study.crt; 
-        ssl_certificate_key /usr/local/soga/private.key; 
-        ssl_session_cache   shared:SSL:10m;            
-                                                       
-        ssl_session_timeout 10m;
-        proxy_connect_timeout 5s;  # 与被代理服务器建立连接的超时时间为5s
-    	proxy_timeout 20s;   # 获取被代理服务器的响应最大超时时间为20s
-        proxy_next_upstream on;  # 当被代理的服务器返回错误或超时时，将未返回响应的客户端连接请求传递给upstream中的下一个服务器
-        proxy_next_upstream_tries 3;   # 转发尝试请求最多3次
-        proxy_next_upstream_timeout 10s;    # 总尝试超时时间为10s
-        proxy_socket_keepalive on;  # 开启SO_KEEPALIVE选项进行心跳检测
-        proxy_protocol    on;
-        proxy_pass        sphk;
-    }
-    server {
-        listen              443 ssl;                   
-        server_name spctw.sankuaiqianshao.com;
-        ssl_protocols       TLSv1.2 TLSv1.3;      
+upstream lionfeilvbin {
+    hash $remote_addr consistent;
+    server [2a13:b487:4f06:1314::1d]:10011 max_fails=3 fail_timeout=30s;
+}
 
-        ssl_certificate /usr/local/soga/study.crt; 
-        ssl_certificate_key /usr/local/soga/private.key; 
-        ssl_session_cache   shared:SSL:10m;            
-                                                       
-        ssl_session_timeout 10m;
-        proxy_connect_timeout 5s;  # 与被代理服务器建立连接的超时时间为5s
-    	proxy_timeout 20s;   # 获取被代理服务器的响应最大超时时间为20s
-        proxy_next_upstream on;  # 当被代理的服务器返回错误或超时时，将未返回响应的客户端连接请求传递给upstream中的下一个服务器
-        proxy_next_upstream_tries 3;   # 转发尝试请求最多3次
-        proxy_next_upstream_timeout 10s;    # 总尝试超时时间为10s
-        proxy_socket_keepalive on;  # 开启SO_KEEPALIVE选项进行心跳检测
-        proxy_protocol    on;
-        proxy_pass        sptw;
-    }
-    server {
-        listen              443 ssl;                   
-        server_name spcsg.sankuaiqianshao.com;
-        ssl_protocols       TLSv1.2 TLSv1.3;      
+upstream lionjianpuzhai {
+    hash $remote_addr consistent;
+    server [2a13:b487:4f02:cafe::b5]:10011 max_fails=3 fail_timeout=30s;
+}
 
-        ssl_certificate /usr/local/soga/study.crt; 
-        ssl_certificate_key /usr/local/soga/private.key; 
-        ssl_session_cache   shared:SSL:10m;            
-                                                       
-        ssl_session_timeout 10m;
-        proxy_connect_timeout 5s;  # 与被代理服务器建立连接的超时时间为5s
-        proxy_timeout 20s;   # 获取被代理服务器的响应最大超时时间为20s
-        proxy_next_upstream on;  # 当被代理的服务器返回错误或超时时，将未返回响应的客户端连接请求传递给upstream中的下一个服务器
-        proxy_next_upstream_tries 3;   # 转发尝试请求最多3次
-        proxy_next_upstream_timeout 10s;    # 总尝试超时时间为10s
-        proxy_socket_keepalive on;  # 开启SO_KEEPALIVE选项进行心跳检测
-        proxy_protocol    on;
-        proxy_pass        spsg;
-    }
-    server {
-        listen              443 ssl;                   
-        server_name spcjp.sankuaiqianshao.com;
-        ssl_protocols       TLSv1.2 TLSv1.3;      
+upstream lionmiandian {
+    hash $remote_addr consistent;
+    server [2a13:b487:4f04::a0]:10011 max_fails=3 fail_timeout=30s;
+}
 
-        ssl_certificate /usr/local/soga/study.crt; 
-        ssl_certificate_key /usr/local/soga/private.key; 
-        ssl_session_cache   shared:SSL:10m;            
-                                                       
-        ssl_session_timeout 10m;
-        proxy_connect_timeout 5s;  # 与被代理服务器建立连接的超时时间为5s
-        proxy_timeout 20s;   # 获取被代理服务器的响应最大超时时间为20s
-        proxy_next_upstream on;  # 当被代理的服务器返回错误或超时时，将未返回响应的客户端连接请求传递给upstream中的下一个服务器
-        proxy_next_upstream_tries 3;   # 转发尝试请求最多3次
-        proxy_next_upstream_timeout 10s;    # 总尝试超时时间为10s
-        proxy_socket_keepalive on;  # 开启SO_KEEPALIVE选项进行心跳检测
-        proxy_protocol    on;
-        proxy_pass        spjp;
-    }
-    server {
-        listen              443 ssl;                   
-        server_name spckr.sankuaiqianshao.com;
-        ssl_protocols       TLSv1.2 TLSv1.3;      
+upstream liontaiguo {
+    hash $remote_addr consistent;
+    server [2a13:b487:4f0d::74]:10011 max_fails=3 fail_timeout=30s;
+}
 
-        ssl_certificate /usr/local/soga/study.crt; 
-        ssl_certificate_key /usr/local/soga/private.key; 
-        ssl_session_cache   shared:SSL:10m;            
-                                                       
-        ssl_session_timeout 10m;
-        proxy_connect_timeout 5s;  # 与被代理服务器建立连接的超时时间为5s
-        proxy_timeout 20s;   # 获取被代理服务器的响应最大超时时间为20s
-        proxy_next_upstream on;  # 当被代理的服务器返回错误或超时时，将未返回响应的客户端连接请求传递给upstream中的下一个服务器
-        proxy_next_upstream_tries 3;   # 转发尝试请求最多3次
-        proxy_next_upstream_timeout 10s;    # 总尝试超时时间为10s
-        proxy_socket_keepalive on;  # 开启SO_KEEPALIVE选项进行心跳检测
-        proxy_protocol    on;
-        proxy_pass        spkr;
-    }
-    server {
-        listen              443 ssl;                   
-        server_name spcus.sankuaiqianshao.com;
-        ssl_protocols       TLSv1.2 TLSv1.3;      
+upstream lionbalin {
+    hash $remote_addr consistent;
+    server [2a13:b487:4f30::25]:10011 max_fails=3 fail_timeout=30s;
+}
 
-        ssl_certificate /usr/local/soga/study.crt; 
-        ssl_certificate_key /usr/local/soga/private.key; 
-        ssl_session_cache   shared:SSL:10m;            
-                                                       
-        ssl_session_timeout 10m;
-        proxy_connect_timeout 5s;  # 与被代理服务器建立连接的超时时间为5s
-        proxy_timeout 20s;   # 获取被代理服务器的响应最大超时时间为20s
-        proxy_next_upstream on;  # 当被代理的服务器返回错误或超时时，将未返回响应的客户端连接请求传递给upstream中的下一个服务器
-        proxy_next_upstream_tries 3;   # 转发尝试请求最多3次
-        proxy_next_upstream_timeout 10s;    # 总尝试超时时间为10s
-        proxy_socket_keepalive on;  # 开启SO_KEEPALIVE选项进行心跳检测
-        proxy_protocol    on;
-        proxy_pass        spus;
-    }
-    server {
-        listen              443 ssl;                   
-        server_name spcuk.sankuaiqianshao.com;
-        ssl_protocols       TLSv1.2 TLSv1.3;      
+upstream lionyinni {
+    hash $remote_addr consistent;
+    server [2a13:b487:4f13::63]:10011 max_fails=3 fail_timeout=30s;
+}
 
-        ssl_certificate /usr/local/soga/study.crt; 
-        ssl_certificate_key /usr/local/soga/private.key; 
-        ssl_session_cache   shared:SSL:10m;            
-                                                       
-        ssl_session_timeout 10m;
-        proxy_connect_timeout 5s;  # 与被代理服务器建立连接的超时时间为5s
-        proxy_timeout 20s;   # 获取被代理服务器的响应最大超时时间为20s
-        proxy_next_upstream on;  # 当被代理的服务器返回错误或超时时，将未返回响应的客户端连接请求传递给upstream中的下一个服务器
-        proxy_next_upstream_tries 3;   # 转发尝试请求最多3次
-        proxy_next_upstream_timeout 10s;    # 总尝试超时时间为10s
-        proxy_socket_keepalive on;  # 开启SO_KEEPALIVE选项进行心跳检测
-        proxy_protocol    on;
-        proxy_pass        spuk;
-    }
-    server {
-        listen              443 ssl;                   
-        server_name spcde.sankuaiqianshao.com;
-        ssl_protocols       TLSv1.2 TLSv1.3;      
+upstream lionyuenan {
+    hash $remote_addr consistent;
+    server [2a13:b487:4f1e::f6]:10011 max_fails=3 fail_timeout=30s;
+}
 
-        ssl_certificate /usr/local/soga/study.crt; 
-        ssl_certificate_key /usr/local/soga/private.key; 
-        ssl_session_cache   shared:SSL:10m;            
-                                                       
-        ssl_session_timeout 10m;
-        proxy_connect_timeout 5s;  # 与被代理服务器建立连接的超时时间为5s
-        proxy_timeout 20s;   # 获取被代理服务器的响应最大超时时间为20s
-        proxy_next_upstream on;  # 当被代理的服务器返回错误或超时时，将未返回响应的客户端连接请求传递给upstream中的下一个服务器
-        proxy_next_upstream_tries 3;   # 转发尝试请求最多3次
-        proxy_next_upstream_timeout 10s;    # 总尝试超时时间为10s
-        proxy_socket_keepalive on;  # 开启SO_KEEPALIVE选项进行心跳检测
-        proxy_protocol    on;
-        proxy_pass        spde;
-    }
-    server {
-        listen              443 ssl;                   
-        server_name tttus.sankuaiqianshao.com;
-        ssl_protocols       TLSv1.2 TLSv1.3;      
+upstream lionfandigang {
+    hash $remote_addr consistent;
+    server [2a13:b487:4f12::bb]:10011 max_fails=3 fail_timeout=30s;
+}
 
-        ssl_certificate /usr/local/soga/study.crt; 
-        ssl_certificate_key /usr/local/soga/private.key; 
-        ssl_session_cache   shared:SSL:10m;            
-                                                       
-        ssl_session_timeout 10m;
-        proxy_connect_timeout 5s;  # 与被代理服务器建立连接的超时时间为5s
-        proxy_timeout 20s;   # 获取被代理服务器的响应最大超时时间为20s
-        proxy_next_upstream on;  # 当被代理的服务器返回错误或超时时，将未返回响应的客户端连接请求传递给upstream中的下一个服务器
-        proxy_next_upstream_tries 3;   # 转发尝试请求最多3次
-        proxy_next_upstream_timeout 10s;    # 总尝试超时时间为10s
-        proxy_socket_keepalive on;  # 开启SO_KEEPALIVE选项进行心跳检测
-        proxy_protocol    on;
-        proxy_pass        tikus;
-    }
-    server {
-        listen              443 ssl;                   
-        server_name tttuk.sankuaiqianshao.com;
-        ssl_protocols       TLSv1.2 TLSv1.3;      
+upstream lionagenting {
+    hash $remote_addr consistent;
+    server [2a13:b487:4f16::7b]:10011 max_fails=3 fail_timeout=30s;
+}
 
-        ssl_certificate /usr/local/soga/study.crt; 
-        ssl_certificate_key /usr/local/soga/private.key; 
-        ssl_session_cache   shared:SSL:10m;            
-                                                       
-        ssl_session_timeout 10m;
-        proxy_connect_timeout 5s;  # 与被代理服务器建立连接的超时时间为5s
-        proxy_timeout 20s;   # 获取被代理服务器的响应最大超时时间为20s
-        proxy_next_upstream on;  # 当被代理的服务器返回错误或超时时，将未返回响应的客户端连接请求传递给upstream中的下一个服务器
-        proxy_next_upstream_tries 3;   # 转发尝试请求最多3次
-        proxy_next_upstream_timeout 10s;    # 总尝试超时时间为10s
-        proxy_socket_keepalive on;  # 开启SO_KEEPALIVE选项进行心跳检测
-        proxy_protocol    on;
-        proxy_pass       tikuk;
-    }
+# 各个区域的服务器配置
+server {
+    listen 443 ssl;   
+    ssl_ciphers 'TLS_AES_128_GCM_SHA256:TLS_AES_256_GCM_SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-RSA-AES128-GCM-SHA256';
+    ssl_prefer_server_ciphers on;  # 优先使用服务器端配置的加密套件
+    server_name lionao.xn--e6q56cu20k.com;
+    proxy_pass lionao;
+    include /usr/local/nginx/mytcp/ssl_common.conf;
+    include /usr/local/nginx/mytcp/proxy_common.conf;
+}
+
+server {
+    listen 443 ssl;  
+    ssl_ciphers 'TLS_AES_128_GCM_SHA256:TLS_AES_256_GCM_SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-RSA-AES128-GCM-SHA256';
+    ssl_prefer_server_ciphers on;  # 优先使用服务器端配置的加密套件
+    server_name lionfeilvbin.xn--e6q56cu20k.com;
+    proxy_pass lionfeilvbin;
+    include /usr/local/nginx/mytcp/ssl_common.conf;
+    include /usr/local/nginx/mytcp/proxy_common.conf;
+}
+
+server {
+    listen 443 ssl;   
+    ssl_ciphers 'TLS_AES_128_GCM_SHA256:TLS_AES_256_GCM_SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-RSA-AES128-GCM-SHA256';
+    ssl_prefer_server_ciphers on;  # 优先使用服务器端配置的加密套件
+    server_name lionjianpuzhai.xn--e6q56cu20k.com;
+    proxy_pass lionjianpuzhai;
+    include /usr/local/nginx/mytcp/ssl_common.conf;
+    include /usr/local/nginx/mytcp/proxy_common.conf;
+}
+
+server {
+    listen 443 ssl;  
+    ssl_ciphers 'TLS_AES_128_GCM_SHA256:TLS_AES_256_GCM_SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-RSA-AES128-GCM-SHA256';
+    ssl_prefer_server_ciphers on;  # 优先使用服务器端配置的加密套件
+    server_name lionmiandian.xn--e6q56cu20k.com;
+    proxy_pass lionmiandian;
+    include /usr/local/nginx/mytcp/ssl_common.conf;
+    include /usr/local/nginx/mytcp/proxy_common.conf;
+}
+
+server {
+    listen 443 ssl;  
+    ssl_ciphers 'TLS_AES_128_GCM_SHA256:TLS_AES_256_GCM_SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-RSA-AES128-GCM-SHA256';
+    ssl_prefer_server_ciphers on;  # 优先使用服务器端配置的加密套件
+    server_name liontaiguo.xn--e6q56cu20k.com;
+    proxy_pass liontaiguo;
+    include /usr/local/nginx/mytcp/ssl_common.conf;
+    include /usr/local/nginx/mytcp/proxy_common.conf;
+}
+
+server {
+    listen 443 ssl;  
+    ssl_ciphers 'TLS_AES_128_GCM_SHA256:TLS_AES_256_GCM_SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-RSA-AES128-GCM-SHA256';
+    ssl_prefer_server_ciphers on;  # 优先使用服务器端配置的加密套件
+    server_name lionbalin.xn--e6q56cu20k.com;
+    proxy_pass lionbalin;
+    include /usr/local/nginx/mytcp/ssl_common.conf;
+    include /usr/local/nginx/mytcp/proxy_common.conf;
+}
+
+server {
+    listen 443 ssl;   
+    ssl_ciphers 'TLS_AES_128_GCM_SHA256:TLS_AES_256_GCM_SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-RSA-AES128-GCM-SHA256';
+    ssl_prefer_server_ciphers on;  # 优先使用服务器端配置的加密套件
+    server_name lionyinni.xn--e6q56cu20k.com;
+    proxy_pass lionyinni;
+    include /usr/local/nginx/mytcp/ssl_common.conf;
+    include /usr/local/nginx/mytcp/proxy_common.conf;
+}
+
+server {
+    listen 443 ssl;  
+    ssl_ciphers 'TLS_AES_128_GCM_SHA256:TLS_AES_256_GCM_SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-RSA-AES128-GCM-SHA256';
+    ssl_prefer_server_ciphers on;  # 优先使用服务器端配置的加密套件
+    server_name lionyuenan.xn--e6q56cu20k.com;
+    proxy_pass lionyuenan;
+    include /usr/local/nginx/mytcp/ssl_common.conf;
+    include /usr/local/nginx/mytcp/proxy_common.conf;
+}
+
+server {
+    listen 443 ssl; 
+    ssl_ciphers 'TLS_AES_128_GCM_SHA256:TLS_AES_256_GCM_SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-RSA-AES128-GCM-SHA256';
+    ssl_prefer_server_ciphers on;  # 优先使用服务器端配置的加密套件
+    server_name lionfandigang.xn--e6q56cu20k.com;
+    proxy_pass lionfandigang;
+    include /usr/local/nginx/mytcp/ssl_common.conf;
+    include /usr/local/nginx/mytcp/proxy_common.conf;
+}
+
+server {
+    listen 443 ssl; 
+    ssl_ciphers 'TLS_AES_128_GCM_SHA256:TLS_AES_256_GCM_SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-RSA-AES128-GCM-SHA256';
+    ssl_prefer_server_ciphers on;  # 优先使用服务器端配置的加密套件
+    server_name lionagenting.xn--e6q56cu20k.com;
+    proxy_pass lionagenting;
+    include /usr/local/nginx/mytcp/ssl_common.conf;
+    include /usr/local/nginx/mytcp/proxy_common.conf;
+}
