--- a/996cloud.conf
+++ b/996cloud.conf
@@ -48,6 +48,27 @@ upstream lionagenting {
     server [2a13:b487:4f16::7b]:10012 max_fails=3 fail_timeout=30s;
 }
 
+upstream lionjp {
+    hash $remote_addr consistent;
+    server 172.234.80.144:10012 max_fails=3 fail_timeout=30s;
+}
+
+upstream lionsg {
+    hash $remote_addr consistent;
+    server 139.162.11.57:10012 max_fails=3 fail_timeout=30s;
+}
+
+upstream liontuerqi {
+    hash $remote_addr consistent;
+    server 193.124.46.3:10012 max_fails=3 fail_timeout=30s;
+}
+
+upstream lionmy {
+    hash $remote_addr consistent;
+    server 38.47.189.14:10012 max_fails=3 fail_timeout=30s;
+}
+
+
 # 各个区域的服务器配置
 server {
     listen 443 ssl;   
@@ -145,6 +166,46 @@ server {
     ssl_prefer_server_ciphers on;  # 优先使用服务器端配置的加密套件
     server_name lionagenting.xn--e6q56cu20k.com;
     proxy_pass lionagenting;
+    include /usr/local/nginx/mytcp/ssl_common.conf;
+    include /usr/local/nginx/mytcp/proxy_common.conf;
+}
+
+server {
+    listen 443 ssl; 
+    ssl_ciphers 'TLS_AES_128_GCM_SHA256:TLS_AES_256_GCM_SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-RSA-AES128-GCM-SHA256';
+    ssl_prefer_server_ciphers on;  # 优先使用服务器端配置的加密套件
+    server_name lionjp.xn--e6q56cu20k.com;
+    proxy_pass lionjp;
+    include /usr/local/nginx/mytcp/ssl_common.conf;
+    include /usr/local/nginx/mytcp/proxy_common.conf;
+}
+
+server {
+    listen 443 ssl; 
+    ssl_ciphers 'TLS_AES_128_GCM_SHA256:TLS_AES_256_GCM_SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-RSA-AES128-GCM-SHA256';
+    ssl_prefer_server_ciphers on;  # 优先使用服务器端配置的加密套件
+    server_name lionsg.xn--e6q56cu20k.com;
+    proxy_pass lionsg;
+    include /usr/local/nginx/mytcp/ssl_common.conf;
+    include /usr/local/nginx/mytcp/proxy_common.conf;
+}
+
+server {
+    listen 443 ssl; 
+    ssl_ciphers 'TLS_AES_128_GCM_SHA256:TLS_AES_256_GCM_SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-RSA-AES128-GCM-SHA256';
+    ssl_prefer_server_ciphers on;  # 优先使用服务器端配置的加密套件
+    server_name liontuerqi.xn--e6q56cu20k.com;
+    proxy_pass liontuerqi;
+    include /usr/local/nginx/mytcp/ssl_common.conf;
+    include /usr/local/nginx/mytcp/proxy_common.conf;
+}
+
+server {
+    listen 443 ssl; 
+    ssl_ciphers 'TLS_AES_128_GCM_SHA256:TLS_AES_256_GCM_SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-RSA-AES128-GCM-SHA256';
+    ssl_prefer_server_ciphers on;  # 优先使用服务器端配置的加密套件
+    server_name lionmy.xn--e6q56cu20k.com;
+    proxy_pass lionmy;
     include /usr/local/nginx/mytcp/ssl_common.conf;
     include /usr/local/nginx/mytcp/proxy_common.conf;
 }
