--- a/spt.conf
+++ b/spt.conf
@@ -48,6 +48,26 @@ upstream spagenting {
     server [2a13:b487:4f16::7b]:10011 max_fails=3 fail_timeout=30s;
 }
 
+upstream spjp {
+    hash $remote_addr consistent;
+    server 172.234.80.144:10012 max_fails=3 fail_timeout=30s;
+}
+
+upstream spsg {
+    hash $remote_addr consistent;
+    server 139.162.11.57:10012 max_fails=3 fail_timeout=30s;
+}
+
+upstream sptuerqi {
+    hash $remote_addr consistent;
+    server 193.124.46.3:10012 max_fails=3 fail_timeout=30s;
+}
+
+upstream spmy {
+    hash $remote_addr consistent;
+    server 38.47.189.14:10012 max_fails=3 fail_timeout=30s;
+}
+
 # 各个区域的服务器配置
 server {
     listen 443 ssl;   
@@ -145,6 +165,46 @@ server {
     ssl_prefer_server_ciphers on;  # 优先使用服务器端配置的加密套件
     server_name spagenting.xn--e6q56cu20k.com;
     proxy_pass spagenting;
+    include /usr/local/nginx/mytcp/ssl_common.conf;
+    include /usr/local/nginx/mytcp/proxy_common.conf;
+}
+
+server {
+    listen 443 ssl; 
+    ssl_ciphers 'TLS_AES_128_GCM_SHA256:TLS_AES_256_GCM_SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-RSA-AES128-GCM-SHA256';
+    ssl_prefer_server_ciphers on;  # 优先使用服务器端配置的加密套件
+    server_name spjp.xn--e6q56cu20k.com;
+    proxy_pass spjp;
+    include /usr/local/nginx/mytcp/ssl_common.conf;
+    include /usr/local/nginx/mytcp/proxy_common.conf;
+}
+
+server {
+    listen 443 ssl; 
+    ssl_ciphers 'TLS_AES_128_GCM_SHA256:TLS_AES_256_GCM_SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-RSA-AES128-GCM-SHA256';
+    ssl_prefer_server_ciphers on;  # 优先使用服务器端配置的加密套件
+    server_name spsg.xn--e6q56cu20k.com;
+    proxy_pass spsg;
+    include /usr/local/nginx/mytcp/ssl_common.conf;
+    include /usr/local/nginx/mytcp/proxy_common.conf;
+}
+
+server {
+    listen 443 ssl; 
+    ssl_ciphers 'TLS_AES_128_GCM_SHA256:TLS_AES_256_GCM_SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-RSA-AES128-GCM-SHA256';
+    ssl_prefer_server_ciphers on;  # 优先使用服务器端配置的加密套件
+    server_name sptuerqi.xn--e6q56cu20k.com;
+    proxy_pass sptuerqi;
+    include /usr/local/nginx/mytcp/ssl_common.conf;
+    include /usr/local/nginx/mytcp/proxy_common.conf;
+}
+
+server {
+    listen 443 ssl; 
+    ssl_ciphers 'TLS_AES_128_GCM_SHA256:TLS_AES_256_GCM_SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-RSA-AES128-GCM-SHA256';
+    ssl_prefer_server_ciphers on;  # 优先使用服务器端配置的加密套件
+    server_name spmy.xn--e6q56cu20k.com;
+    proxy_pass spmy;
     include /usr/local/nginx/mytcp/ssl_common.conf;
     include /usr/local/nginx/mytcp/proxy_common.conf;
 }
