--- a/miaosu.conf
+++ b/miaosu.conf
@@ -1,242 +1,91 @@
-    upstream miaosuhk {
-    	hash $remote_addr consistent;
-    	server 172.104.95.64:10091 max_fails=3 fail_timeout=30s;
-    }
-    upstream miaosusg {
-        hash $remote_addr consistent;
-        server 139.162.56.91:10091 max_fails=3 fail_timeout=30s;
-    }
-    upstream miaosujp {
-        hash $remote_addr consistent;
-    	server 172.104.95.64:10091 max_fails=3 fail_timeout=30s;
-    	server 139.162.109.153:10091 max_fails=3 fail_timeout=30s;
-    }
-    upstream miaosuuk {
-        hash $remote_addr consistent;
-        server 143.47.249.213:10091 max_fails=3 fail_timeout=30s;
-    }
-     upstream miaosuus {
-        hash $remote_addr consistent;
-        server 18.218.254.204:10091 max_fails=3 fail_timeout=30s;
-    }
-     upstream miaosude {
-        hash $remote_addr consistent;
-        server 138.2.133.156:10091 max_fails=3 fail_timeout=30s;
-    }
-     upstream miaosutw {
-        hash $remote_addr consistent;
-        server 129.148.27.124:10091 max_fails=3 fail_timeout=30s;
-    }
-     upstream miaosuin {
-        hash $remote_addr consistent;
-        server 45.79.117.46:10091 max_fails=3 fail_timeout=30s;
-    }
-     upstream miaosukr {
-        hash $remote_addr consistent;
-        server 13.124.84.125:10091 max_fails=3 fail_timeout=30s;
-    }
-     upstream miaosuca {
-        hash $remote_addr consistent;
-        server 132.145.109.63:10091 max_fails=3 fail_timeout=30s;
-    }
-    server {
-        listen              443 ssl;                   
-        server_name sphk.1234567890spcloud.com;
-        ssl_protocols       TLSv1.2 TLSv1.3;      
-        
-        ssl_certificate /usr/local/soga/spcloud.crt; 
-        ssl_certificate_key /usr/local/soga/privatesp.key; 
-        ssl_session_cache   shared:SSL:10m;                                                          
-        ssl_session_timeout 10m;
-        proxy_connect_timeout 5s;  # 与被代理服务器建立连接的超时时间为5s
-    	proxy_timeout 20s;   # 获取被代理服务器的响应最大超时时间为20s
-        proxy_next_upstream on;  # 当被代理的服务器返回错误或超时时，将未返回响应的客户端连接请求传递给upstream中的下一个服务器
-        proxy_next_upstream_tries 3;   # 转发尝试请求最多3次
-        proxy_next_upstream_timeout 10s;    # 总尝试超时时间为10s
-        proxy_socket_keepalive on;  # 开启SO_KEEPALIVE选项进行心跳检测
-        proxy_protocol    on;
-        proxy_pass        miaosuhk;
-    }
-    server {
-        listen              443 ssl;                   
-        server_name spsg.1234567890spcloud.com;
-        ssl_protocols       TLSv1.2 TLSv1.3;      
+upstream msus {
+    hash $remote_addr consistent;
+    server 143.198.63.59:1991 max_fails=3 fail_timeout=30s;
+}
 
-        ssl_certificate /usr/local/soga/spcloud.crt; 
-        ssl_certificate_key /usr/local/soga/privatesp.key; 
-        ssl_session_cache   shared:SSL:10m;            
-                                               
-        ssl_session_timeout 10m;
-        proxy_connect_timeout 5s;  # 与被代理服务器建立连接的超时时间为5s
-    	proxy_timeout 20s;   # 获取被代理服务器的响应最大超时时间为20s
-        proxy_next_upstream on;  # 当被代理的服务器返回错误或超时时，将未返回响应的客户端连接请求传递给upstream中的下一个服务器
-        proxy_next_upstream_tries 3;   # 转发尝试请求最多3次
-        proxy_next_upstream_timeout 10s;    # 总尝试超时时间为10s
-        proxy_socket_keepalive on;  # 开启SO_KEEPALIVE选项进行心跳检测
-        proxy_protocol    on;
-        
-        proxy_pass        miaosusg;
+upstream mssg {
+    hash $remote_addr consistent;
+    server 178.128.89.244:1991 max_fails=3 fail_timeout=30s;
+}
 
-    }
-    server {
-        listen              443 ssl;                   
-        server_name spjp1.1234567890spcloud.com;
-        ssl_protocols       TLSv1.2 TLSv1.3;      
+upstream mstuerqi {
+    hash $remote_addr consistent;
+    server 193.124.46.3:1991 max_fails=3 fail_timeout=30s;
+}
 
-        ssl_certificate /usr/local/soga/spcloud.crt; 
-        ssl_certificate_key /usr/local/soga/privatesp.key; 
-        ssl_session_cache   shared:SSL:10m;            
-                                                     
-        ssl_session_timeout 10m;
-        proxy_connect_timeout 5s;  # 与被代理服务器建立连接的超时时间为5s
-        proxy_timeout 20s;   # 获取被代理服务器的响应最大超时时间为20s
-        proxy_next_upstream on;  # 当被代理的服务器返回错误或超时时，将未返回响应的客户端连接请求传递给upstream中的下一个服务器
-        proxy_next_upstream_tries 3;   # 转发尝试请求最多3次
-        proxy_next_upstream_timeout 10s;    # 总尝试超时时间为10s
-        proxy_socket_keepalive on;  # 开启SO_KEEPALIVE选项进行心跳检测
-        proxy_protocol    on;
-        proxy_pass        miaosujp;
+upstream msmy {
+    hash $remote_addr consistent;
+    server 38.47.189.14:1991 max_fails=3 fail_timeout=30s;
+}
 
-    }
-    server {
-        listen              443 ssl;                   
-        server_name spuk.1234567890spcloud.com;
-        ssl_protocols       TLSv1.2 TLSv1.3;      
+upstream msuk {
+    hash $remote_addr consistent;
+    server 142.93.35.215:1991 max_fails=3 fail_timeout=30s;
+}
 
-        ssl_certificate /usr/local/soga/spcloud.crt; 
-        ssl_certificate_key /usr/local/soga/privatesp.key; 
-        ssl_session_cache   shared:SSL:10m;            
-                                               
-        ssl_session_timeout 10m;
-        proxy_connect_timeout 5s;  # 与被代理服务器建立连接的超时时间为5s
-        proxy_timeout 20s;   # 获取被代理服务器的响应最大超时时间为20s
-        proxy_next_upstream on;  # 当被代理的服务器返回错误或超时时，将未返回响应的客户端连接请求传递给upstream中的下一个服务器
-        proxy_next_upstream_tries 3;   # 转发尝试请求最多3次
-        proxy_next_upstream_timeout 10s;    # 总尝试超时时间为10s
-        proxy_socket_keepalive on;  # 开启SO_KEEPALIVE选项进行心跳检测
-        proxy_protocol    on;
-        proxy_pass        miaosuuk;
-    }
-    server {
-        listen              443 ssl;                   
-        server_name spus.1234567890spcloud.com;
-        ssl_protocols       TLSv1.2 TLSv1.3;      
-        
-        ssl_certificate /usr/local/soga/spcloud.crt; 
-        ssl_certificate_key /usr/local/soga/privatesp.key; 
-        ssl_session_cache   shared:SSL:10m;            
-                                           
-        ssl_session_timeout 10m;
-        proxy_connect_timeout 5s;  # 与被代理服务器建立连接的超时时间为5s
-        proxy_timeout 20s;   # 获取被代理服务器的响应最大超时时间为20s
-        proxy_next_upstream on;  # 当被代理的服务器返回错误或超时时，将未返回响应的客户端连接请求传递给upstream中的下一个服务器
-        proxy_next_upstream_tries 3;   # 转发尝试请求最多3次
-        proxy_next_upstream_timeout 10s;    # 总尝试超时时间为10s
-        proxy_socket_keepalive on;  # 开启SO_KEEPALIVE选项进行心跳检测
-        proxy_protocol    on;
-        proxy_pass        miaosuus;
+upstream msde {
+    hash $remote_addr consistent;
+    server 159.223.29.245:1991 max_fails=3 fail_timeout=30s;
+}
 
-    }
-    server {
-        listen              443 ssl;                   
-        server_name spde.1234567890spcloud.com;
-        ssl_protocols       TLSv1.2 TLSv1.3;      
-        
-        ssl_certificate /usr/local/soga/spcloud.crt; 
-        ssl_certificate_key /usr/local/soga/privatesp.key; 
-        ssl_session_cache   shared:SSL:10m;            
-                                          
-        ssl_session_timeout 10m;
-        proxy_connect_timeout 5s;  # 与被代理服务器建立连接的超时时间为5s
-        proxy_timeout 20s;   # 获取被代理服务器的响应最大超时时间为20s
 
-        proxy_next_upstream on;  # 当被代理的服务器返回错误或超时时，将未返回响应的客户端连接请求传递给upstream中的下一个服务器
-        proxy_next_upstream_tries 3;   # 转发尝试请求最多3次
-        proxy_next_upstream_timeout 10s;    # 总尝试超时时间为10s
-        proxy_socket_keepalive on;  # 开启SO_KEEPALIVE选项进行心跳检测
-        proxy_protocol    on;
-        proxy_pass        miaosude;
+# 各个区域的服务器配置
+server {
+    listen 443 ssl; 
+    ssl_ciphers 'TLS_AES_128_GCM_SHA256:TLS_AES_256_GCM_SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-RSA-AES128-GCM-SHA256';
+    ssl_prefer_server_ciphers on;  # 优先使用服务器端配置的加密套件
+    server_name msus.xn--e6q56cu20k.com;
+    proxy_pass msus;
+    include /usr/local/nginx/mytcp/ssl_common.conf;
+    include /usr/local/nginx/mytcp/proxy_common.conf;
+}
 
-    }
-    server {
-        listen              443 ssl;                   
-        server_name spca.1234567890spcloud.com;
-        ssl_protocols       TLSv1.2 TLSv1.3;      
-        
-        ssl_certificate /usr/local/soga/spcloud.crt; 
-        ssl_certificate_key /usr/local/soga/privatesp.key; 
-        ssl_session_cache   shared:SSL:10m;            
-                                              
-        ssl_session_timeout 10m;
-        proxy_connect_timeout 5s;  # 与被代理服务器建立连接的超时时间为5s
-        proxy_timeout 20s;   # 获取被代理服务器的响应最大超时时间为20s
+server {
+    listen 443 ssl; 
+    ssl_ciphers 'TLS_AES_128_GCM_SHA256:TLS_AES_256_GCM_SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-RSA-AES128-GCM-SHA256';
+    ssl_prefer_server_ciphers on;  # 优先使用服务器端配置的加密套件
+    server_name mssg.xn--e6q56cu20k.com;
+    proxy_pass mssg;
+    include /usr/local/nginx/mytcp/ssl_common.conf;
+    include /usr/local/nginx/mytcp/proxy_common.conf;
+}
 
-        proxy_next_upstream on;  # 当被代理的服务器返回错误或超时时，将未返回响应的客户端连接请求传递给upstream中的下一个服务器
-        proxy_next_upstream_tries 3;   # 转发尝试请求最多3次
-        proxy_next_upstream_timeout 10s;    # 总尝试超时时间为10s
-        proxy_socket_keepalive on;  # 开启SO_KEEPALIVE选项进行心跳检测
-        proxy_protocol    on;
-        proxy_pass        miaosuca;
+server {
+    listen 443 ssl; 
+    ssl_ciphers 'TLS_AES_128_GCM_SHA256:TLS_AES_256_GCM_SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-RSA-AES128-GCM-SHA256';
+    ssl_prefer_server_ciphers on;  # 优先使用服务器端配置的加密套件
+    server_name mstuerqi.xn--e6q56cu20k.com;
+    proxy_pass mstuerqi;
+    include /usr/local/nginx/mytcp/ssl_common.conf;
+    include /usr/local/nginx/mytcp/proxy_common.conf;
+}
 
-    }
-    server {
-        listen              443 ssl;                   
-        server_name spin.1234567890spcloud.com;
-        ssl_protocols       TLSv1.2 TLSv1.3;      
-        
-        ssl_certificate /usr/local/soga/spcloud.crt; 
-        ssl_certificate_key /usr/local/soga/privatesp.key; 
-        ssl_session_cache   shared:SSL:10m;            
-                                              
-        ssl_session_timeout 10m;
-        proxy_connect_timeout 5s;  # 与被代理服务器建立连接的超时时间为5s
-        proxy_timeout 20s;   # 获取被代理服务器的响应最大超时时间为20s
+server {
+    listen 443 ssl; 
+    ssl_ciphers 'TLS_AES_128_GCM_SHA256:TLS_AES_256_GCM_SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-RSA-AES128-GCM-SHA256';
+    ssl_prefer_server_ciphers on;  # 优先使用服务器端配置的加密套件
+    server_name msmy.xn--e6q56cu20k.com;
+    proxy_pass msmy;
+    include /usr/local/nginx/mytcp/ssl_common.conf;
+    include /usr/local/nginx/mytcp/proxy_common.conf;
+}
 
-        proxy_next_upstream on;  # 当被代理的服务器返回错误或超时时，将未返回响应的客户端连接请求传递给upstream中的下一个服务器
-        proxy_next_upstream_tries 3;   # 转发尝试请求最多3次
-        proxy_next_upstream_timeout 10s;    # 总尝试超时时间为10s
-        proxy_socket_keepalive on;  # 开启SO_KEEPALIVE选项进行心跳检测
-        proxy_protocol    on;
-        proxy_pass        miaosuin;
+server {
+    listen 443 ssl; 
+    ssl_ciphers 'TLS_AES_128_GCM_SHA256:TLS_AES_256_GCM_SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-RSA-AES128-GCM-SHA256';
+    ssl_prefer_server_ciphers on;  # 优先使用服务器端配置的加密套件
+    server_name msuk.xn--e6q56cu20k.com;
+    proxy_pass msuk;
+    include /usr/local/nginx/mytcp/ssl_common.conf;
+    include /usr/local/nginx/mytcp/proxy_common.conf;
+}
 
-    }
-    server {
-        listen              443 ssl;                   
-        server_name sptw.1234567890spcloud.com;
-        ssl_protocols       TLSv1.2 TLSv1.3;      
-        
-        ssl_certificate /usr/local/soga/spcloud.crt; 
-        ssl_certificate_key /usr/local/soga/privatesp.key; 
-        ssl_session_cache   shared:SSL:10m;            
-                                           
-        ssl_session_timeout 10m;
-        proxy_connect_timeout 5s;  # 与被代理服务器建立连接的超时时间为5s
-        proxy_timeout 20s;   # 获取被代理服务器的响应最大超时时间为20s
-
-        proxy_next_upstream on;  # 当被代理的服务器返回错误或超时时，将未返回响应的客户端连接请求传递给upstream中的下一个服务器
-        proxy_next_upstream_tries 3;   # 转发尝试请求最多3次
-        proxy_next_upstream_timeout 10s;    # 总尝试超时时间为10s
-        proxy_socket_keepalive on;  # 开启SO_KEEPALIVE选项进行心跳检测
-        proxy_protocol    on;
-        proxy_pass        miaosutw;
-    }
-    server {
-        listen              443 ssl;                   
-        server_name spkr.1234567890spcloud.com;
-        ssl_protocols       TLSv1.2 TLSv1.3;      
-        
-        ssl_certificate /usr/local/soga/spcloud.crt; 
-        ssl_certificate_key /usr/local/soga/privatesp.key; 
-        ssl_session_cache   shared:SSL:10m;                                                 
-        ssl_session_timeout 10m;
-        proxy_connect_timeout 5s;  # 与被代理服务器建立连接的超时时间为5s
-        proxy_timeout 20s;   # 获取被代理服务器的响应最大超时时间为20s
-
-        proxy_next_upstream on;  # 当被代理的服务器返回错误或超时时，将未返回响应的客户端连接请求传递给upstream中的下一个服务器
-        proxy_next_upstream_tries 3;   # 转发尝试请求最多3次
-        proxy_next_upstream_timeout 10s;    # 总尝试超时时间为10s
-        proxy_socket_keepalive on;  # 开启SO_KEEPALIVE选项进行心跳检测
-        proxy_protocol    on;
-        proxy_pass        miaosukr;
-
-    }
+server {
+    listen 443 ssl; 
+    ssl_ciphers 'TLS_AES_128_GCM_SHA256:TLS_AES_256_GCM_SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-RSA-AES128-GCM-SHA256';
+    ssl_prefer_server_ciphers on;  # 优先使用服务器端配置的加密套件
+    server_name msde.xn--e6q56cu20k.com;
+    proxy_pass msde;
+    include /usr/local/nginx/mytcp/ssl_common.conf;
+    include /usr/local/nginx/mytcp/proxy_common.conf;
+}
